--- a/Resources/Styles/CheckBoxStyles.xaml
+++ b/Resources/Styles/CheckBoxStyles.xaml
@@ -33,10 +33,8 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style TargetType="{x:Type CheckBox}" x:Key="ContentLeftCheckBoxStyle">
-        <Setter Property="Foreground"
-            Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
         <Setter Property="Background"
             Value="{StaticResource CheckBoxFillNormal}" />
         <Setter Property="BorderBrush"
@@ -78,8 +76,7 @@
                         </Trigger>
                         <Trigger Property="IsEnabled"
                      Value="false">
-                            <Setter Property="Foreground"
-                      Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+                            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
